fix openapi-gen
